samples/_failures_safe/1761277414_080dfe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_89791861.c: In function ‘main’:
./samples/SAFE/__tmp_89791861.c:155:5: error: expected ‘,’ or ‘;’ at end of input
  155 |     for (int i = 0
      |     ^~~
./samples/SAFE/__tmp_89791861.c:155:5: error: expected declaration or statement at end of input
